Issue #3212343 by Baptiste Marck, BhumikaVarshney: Overflow cutting off Chosen select options in views filters

--- a/styles/components/_views.scss
+++ b/styles/components/_views.scss
@@ -190,7 +190,6 @@
 .views-displays {
   border: 1px solid var(--colorGinLayerBorder);
   border-radius: $borderMedium;
-  overflow: hidden;
 }
 
 .views-admin {
@@ -221,10 +220,6 @@
   .dropbutton-wrapper {
     top: 20px;
     right: 24px;
-  }
-
-  .dropbutton--small .dropbutton__item > a {
-    line-height: 1.3rem;
   }
 }
 
